Dropdown Option for custom_parameter